--- a/Django/nomad-backend/pyproject.toml
+++ b/Django/nomad-backend/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "nomad_backend"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^4.2.3"
+pillow = "^10.0.0"
 
 
 [build-system]
