#15 AUTHENTICATION 종료 코드 정리

--- a/Django/nomad-backend/pyproject.toml
+++ b/Django/nomad-backend/pyproject.toml
@@ -11,6 +11,9 @@ packages = [{include = "nomad_backend"}]
 python = "^3.11"
 django = "^4.2.3"
 pillow = "^10.0.0"
+djangorestframework = "^3.14.0"
+pyjwt = "^2.8.0"
+django-environ = "^0.10.0"
 
 
 [build-system]
